# repositext

./: .gitignore  README.md  license.txt  manage.py  project_info.py  reset-data.sh  runserver.sh  setadminpw.py
apps/docweb/: apps.py  urls.py  views.py
apps/docweb/templates/docweb/: index.html  repository.html
apps/repo/: admin.py  models.py
apps/repo/migrations/: 0001_initial.py  0002_auto_20200221_0205.py  0002_documentversion_modified.py  0003_auto_20200221_0208.py
environment/: pyproject.toml  requirements.txt
repositext/: asgi.py  settings.py  urls.py  wsgi.py
scripts/data/: documents.py  folders.py
static/css/: styles.css
test-documents/: TestDocument1.docx
