[tool.poetry]
name = "repositext"
version = "0.1.0"
description = "CMS in python"
authors = ["Harlin Seritt <harlin.seritt@gmail.com>"]
license = "agpl-3.0"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.2.3"
Django = "3.0.3"
django-extensions = "2.2.8"
mysqlclient = "1.4.6"
packaging = "20.1"
Pillow = "7.0.0"
pip-review = "1.0"
pygraphviz = "1.5"
pyparsing = "2.4.6"
pytz = "2019.3"
six = "1.14.0"
sqlparse = "0.3.0"
Werkzeug = "1.0.0"
attrs = "19.3.0"
CacheControl = "0.12.6"
cachy = "0.3.0"
certifi = "2019.11.28"
cffi = "1.14.0"
chardet = "3.0.4"
cleo = "0.7.6"
clikit = "0.4.1"
cryptography = "2.8"
html5lib = "1.0.1"
idna = "2.9"
jeepney = "0.4.2"
jsonschema = "3.2.0"
keyring = "20.0.1"
lockfile = "0.12.2"
msgpack = "1.0.0"
pastel = "0.1.1"
pexpect = "4.8.0"
pkginfo = "1.5.0.1"
poetry = "1.0.3"
ptyprocess = "0.6.0"
pycparser = "2.19"
pylev = "1.3.0"
pyrsistent = "0.14.11"
requests = "2.23.0"
requests-toolbelt = "0.8.0"
SecretStorage = "3.1.2"
shellingham = "1.3.2"
tomlkit = "0.5.8"
urllib3 = "1.25.8"
webencodings = "0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
